# wield-pytest

./: .gitignore  README.md  setup.cfg
src/wavestate/pytest/: __init__.py  _version.py  fixtures.py  utilities.py
src/wavestate/pytest/test/: test_fixtures.py
src/wield/pytest/: __init__.py  _version.py  anywhere.py  fixtures.py  plugin.py  rand.py  utilities.py
src/wield/pytest/parse_collection/: __init__.py  __main__.py  parse.py
src/wield/pytest/parse_collection/test/: collection_clean.txt  collection_errors.txt  test_pytest_parse_collection.py
src/wield/pytest/test/: test_fixtures.py
tools/: check_versions.py
