# -*- coding: utf-8 -*-
# SPDX-License-Identifier: CC0-1.0
# SPDX-FileCopyrightText: © 2021 Massachusetts Institute of Technology.
# SPDX-FileCopyrightText: © 2021 Lee McCuller <mcculler@caltech.edu>
# NOTICE: Contributors should add their name to copyright and document their contributions in NOTICE

[metadata]
name = wield.pytest
version = 0.9.7.dev0

license = Apache-2.0
license_files = LICENSES/*, NOTICE

author = Lee McCuller
author_email = mcculler@caltech.edu

description = Toolkit for modeling interferometers, circuits, signals, and control systems
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/wieldphysics/wield-pytest
project_urls =
    Bug Tracker = https://github.com/wieldphysics/wield-pytest/issues
    Source Code = https://github.com/wieldphysics/wield-pytest

classifiers =
        Intended Audience :: Science/Research
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 3
        Topic :: Scientific/Engineering :: Physics

[options]
setup_requires =
    setuptools>=45.0.0
install_requires =
    setuptools_scm>=6.0.0
    pytest
    pytest-html
package_dir =
    =src
packages = find_namespace:

[options.extras_require]
devel = pytest-watch

[options.packages.find]
where = src

# install pytest plugin as entry point https://stackoverflow.com/questions/48884796/how-to-set-up-entry-points-in-setup-cfg/50078487#50078487
# https://docs.pytest.org/en/7.1.x/how-to/writing_plugins.html#making-your-plugin-installable-by-others
[options.entry_points]
pytest11 =
    wield_pytest = wield.pytest.plugin

[aliases]
test=pytest

[tools.check_versions]
    version_file = src/wield/pytest/_version.py
